--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=BSS
-spring.datasource.url=jdbc:mysql://localhost:3306/sap_db
-spring.datasource.username=sap_admin
-spring.datasource.password=internet
+spring.datasource.url=jdbc:mysql://localhost:3306/bss_db
+spring.datasource.username=root
+spring.datasource.password=password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
